# tarifa_20td

./: .pre-commit-config.yaml  README.md  __init__.py  config_flow.py  const.py  hacs.json  manifest.json  pyproject.toml  sensor.py
.github/workflows/: hacs.yaml  hacs.yml  hassfest.yaml  main.yml  pylint.yaml  release.yaml  ruff.yaml
custom_components/tarifa_20td/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/tarifa_20td/translations/: en.json  es.json  pt.json
customs_components/tarifa_20td/: const.py
customs_components/tarifa_20td/translations/: en.json
translations/: en.json
